<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_domain_bridge_app</name>
  <version>0.0.1</version>
  <description>Use domain bridge to forward the service, test the service connection, and some ros2cli commands.</description>
  <maintainer email="barry.xu@sony.com">Barry Xu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>domain_bridge</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_interfaces</build_depend>

  <exec_depend>domain_bridge</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
